src/test/resources/good/custom/002a-void-stuff-core.lat
void f() {}

void g(void x, void y) {
    if (x == y)
        printString("YAY!");
    else
        printString("NAY!");
    return x;
}

int main() {
    void x, y = f();
    void z = g(x, y);

    return 0;
}
