src/test/resources/bad/custom/002-main-must-return-int.lat
void main() {
    printString("WRONG!");
    return;
}
